--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,39 @@
+//plugins {
+//    id 'java'
+//}
+//
+//group = 'org.example'
+//version = '1.0-SNAPSHOT'
+//
+//repositories {
+//    mavenCentral()
+//}
+//
+//dependencies {
+//    implementation 'org.seleniumhq.selenium:selenium-java:4.30.0'
+//    implementation 'org.testng:testng:7.11.0'
+//}
+//
+//test {
+//    useTestNG()
+//}
+//
+//task qa(type:Test){
+//    useTestNG()
+//    if (project.hasProperty('browser')){
+//        systemProperty 'browser', ${browser}
+//    }
+//}
+//
+//task qa1(type:Test){
+//    useTestNG() {
+//        suites 'src/test/resources/testng.xml'
+//    }
+//    if (project.hasProperty('browser')){
+//        systemProperty 'browser', ${browser}
+//    }
+//}
+//***************************************************** Делаю версию для себя ****************************************
 plugins {
     id 'java'
 }
@@ -11,9 +47,29 @@ repositories {
 
 dependencies {
     implementation 'org.seleniumhq.selenium:selenium-java:4.30.0'
-    implementation 'org.testng:testng:7.11.0'
+    testImplementation 'org.testng:testng:7.11.0'
 }
 
 test {
     useTestNG()
+    systemProperty 'browser', project.findProperty('browser') ?: 'chrome'
+}
+
+task qa(type: Test) {
+    useTestNG()
+    systemProperty 'browser', project.findProperty('browser') ?: 'chrome'
+}
+
+task qa1(type: Test) {
+    useTestNG() {
+        def suite1 = project.hasProperty("suite1")
+        def suite2 = project.hasProperty("suite2")
+        if (suite1){
+        suites 'src/test/resources/testng.xml'
+    }else if(suite2)
+        {
+        suites 'src/test/resources/smoky.xml'
+        }
+    }
+    systemProperty 'browser', project.findProperty('browser') ?: 'chrome'
 }
