--- a/build.gradle
+++ b/build.gradle
@@ -48,6 +48,7 @@ repositories {
 dependencies {
     implementation 'org.seleniumhq.selenium:selenium-java:4.30.0'
     testImplementation 'org.testng:testng:7.11.0'
+    implementation 'ch.qos.logback:logback-classic:1.5.18'
 }
 
 test {
@@ -64,11 +65,14 @@ task qa1(type: Test) {
     useTestNG() {
         def suite1 = project.hasProperty("suite1")
         def suite2 = project.hasProperty("suite2")
+        def suite3 = project.hasProperty("suite3")
         if (suite1){
         suites 'src/test/resources/testng.xml'
     }else if(suite2)
         {
         suites 'src/test/resources/smoky.xml'
+        }else if (suite3){
+            suites'src/test/resources/negative.xml'
         }
     }
     systemProperty 'browser', project.findProperty('browser') ?: 'chrome'
